<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChronoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar">
        </include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titre"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/chrono"
                android:textColor="@android:color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/green_pastel"
                android:text="@string/start"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/red_pastel"
                android:text="@string/stop"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/restartButton"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/blue_pastel"
                android:text="@string/reset"
                android:textSize="20sp"
                />

            <LinearLayout
                android:id="@+id/LinearButton"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <Button
                    android:id="@+id/countingButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/orange_pastel"
                    android:layout_marginEnd="5dp"
                    android:text="@string/chrono"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    />

                <Button
                    android:id="@+id/decountingButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/orange_pastel"
                    android:layout_marginStart="5dp"
                    android:text="@string/timer1"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    />
            </LinearLayout>

            <Chronometer
                android:id="@+id/simpleChronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/tab_indicator_text"
                android:textSize="60sp"
                />
            <RelativeLayout
                android:id="@+id/LinearEditText"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                >
                <EditText
                    android:id="@+id/startMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/minutes_mm"
                    android:gravity="center"
                    android:textColor="@android:color/tab_indicator_text"
                    android:textSize="30sp"
                    android:minWidth="48dp"
                    android:inputType="number"
                    android:layout_alignEnd="@id/deux_points"
                    android:layout_marginEnd="10dp"
                    />

                <TextView
                    android:id="@+id/deux_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deux_points"
                    android:textSize="30sp"
                    android:layout_centerInParent="true"
                    />

                <EditText
                    android:id="@+id/startSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/seconds_ss"
                    android:gravity="center"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:textColor="@android:color/tab_indicator_text"
                    android:textSize="30sp"
                    android:layout_alignStart="@id/deux_points"
                    android:layout_marginStart="10dp"
                    />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>